# UH_NumericalMethods

./: .gitignore  CMakeLists.txt  README.md  build_submission.sh  collect_answers.sh  collect_cli.sh  collect_scripts.sh  collect_so.sh  create_submission.sh  eigen-5.0.1.tar.bz2  index.html  readme_to_index.sh  setup_py310_venv.sh
POLPAK/cpp/: bernstein_polynomial.cpp  bezier  bezier.cpp  bezier.sh  plot.py  polpak.hpp
POLPAK/f90/: bernstein  bernstein.f90  bezier  bezier.f90  polpak.f90
docker/: Dockerfile
eigen5/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Eigen3ConfigVersion.cmake  Eigen3Targets.cmake  Makefile  buildtests.sh  cdashtesting.cmake  cmake_install.cmake
eigen5/blas/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/blas/testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/demos/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/doc/: CTestTestfile.cmake  Doxyfile  Doxyfile-unsupported  Makefile  cmake_install.cmake
eigen5/doc/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/doc/snippets/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/doc/special_examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/failtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/lapack/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/scripts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/unsupported/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/unsupported/Eigen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/unsupported/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
eigen5/unsupported/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
exercise01/: CMakeCache.txt  CMakeLists.txt  exercise1_2.txt  exercise1_4_Taylor.txt  funks.cpp  funksError.cpp  funksMain.cpp  funksRange.cpp  harmonic.cpp  main.cpp  plot01.py  plotFunks.py
exercise02/: CMakeLists.old  CMakeLists.txt  ex2_p3.c  exercise2_2.txt  exercise2_3.txt  harmonicMain.cpp  harmonic_kahan.cpp  matrix100.txt  matrix6  matrix6singular1.txt  matrix6singular2.txt  output.txt  residual.cpp
exercise02/ex2_p3/: CMakeLists.txt  README  condition.c  ex2_p3.c  matrix6singular
exercise03/: CMakeLists.txt  boostStatistics.cpp  exercise3_2.txt  exercise3_3B.txt  jacobi.cpp  jacobiLink.cpp  jacobiMain.cpp  printJacobi.py  test01.py  test02.py  testJacobi.py
exercise04/: CMakeLists.txt  bifurcation.cpp  exercise4_1A.txt  exercise4_1C.txt  exercise4_2B.txt  exercise4_3.txt  exercise4_3B.txt  exercise4_4B.txt  myroots.cpp  roots.cpp  test01.py  test4_4B.py  testBifurcation.py  testMyroots.py
exercise05/: CMakeLists.txt  broyden.cpp  broydenLink.cpp  e5p3.py  exercise5_1A.txt  exercise5_3.txt  exp.cpp  exp.py  mycos.py  myexp.py  myln.py  randomgenerator.py  test01.py  testBroyden.py
exercise06/: CMakeLists.txt  cubicspline.cpp  cubicsplineLink.cpp  exercise6_2A.txt  exercise6_2B.txt  exercise6_4.txt  problem4.py  richardson.cpp  testcubicspline.py
exercise06/POLPAK/cpp/: bcurve.txt  bernstein_polynomial.cpp  bernstein_polynomial.hpp  bezier.cpp  polpak.cpp  spline.cpp  spline.hpp  test.txt
exercise06/POLPAK/f90/: bernstein_polynomial.f90
exercise07/: CMakeLists.txt  exercise7_2.txt  exercise7_3bc.txt  plotParametricSpline.py  romberg.cpp  rootsGaussLaguerre.py  simpson_gauss_laguerre_test.cpp
exercise08/: CMakeCache.txt  CMakeLists.txt  contour.py  ex8_p2.pdf:Zone.Identifier  exercise8_5b.txt  golden.cpp  goldenLink.cpp  goldenMain.cpp  goldenPlotFunction.py  minimize.cpp  minimizeMain.cpp  minimizePlotFunction.py  plotFrange.py
exercise09/: CMakeLists.txt  chi2.py  exercise9_1.txt  exercise9_2.txt  exercise9_4.txt  exercise9_5.txt  gaussrngPlotDistribution.py  inversecdfLink.cpp  inversecdfPlotDistribution.py  momentLink.cpp  momentPlot.py  mypi.cpp  mypiLink.cpp  mypiPlot.py  problem2.cpp  problem2Link.cpp  problem2PlotDistribution.py  problem4.cpp  problem4Link.cpp  problem4Plot.py
exercise10/: CMakeLists.txt  clt.py  cltLink.cpp  data.txt  problem2.cpp  problem2.py  problem2Link.cpp  testGaussianProcess.py
exercise11/: CMakeLists.txt  exercise11_1A.txt  exercise11_1C.txt  exercise11_2B.txt  finDiffParabolicPotential.cpp  finDiffParabolicPotentialMain.cpp  finiteDifferencePlot.py  finiteDifferenceStencil.cpp  finiteDifferenceStencilLink.cpp  rungeKuttaPlot.py  rungeKuttaSolver.cpp  rungeKuttaSolverLink.cpp  shootingPlot.py  shootingSolverMain.cpp
exercise12/: exercise12_2.txt  exercise12_3.txt  exercise12_4.txt  piano.py  piano_displace.py  samples.tar.xz  tuningfork.py
exercise13/: CMakeLists.txt  exercise13_2.txt  exercise13_3.txt  exercise13_4.txt  fiterf.cpp  fiterf.py  fitpoly.cpp  fitpoly.py  fitpolyLink.cpp  maxwell_boltzmann.py  problem1.py  problem2.py  problem4.py
submission/: README.md  index.html  requirements.txt
submission/answers/exercise01/: exercise1_2.txt  funks.cpp  funksLink.cpp  funksRange.cpp  harmonicMain.cpp
submission/answers/exercise02/: exercise2_2.txt  exercise2_3.txt  exercise2_4.txt  residual.cpp  residualMain.cpp
submission/answers/exercise03/: err_propagMain.cpp  exercise3_2.txt  exercise3_3B.txt  jacobiLink.cpp  jacobiRange.cpp
submission/answers/exercise04/: bifurcation.cpp  bifurcationLink.cpp  bisect_fMain.cpp  exercise4_1AB.txt  exercise4_1C.txt  exercise4_2B.txt  exercise4_3B.txt  exercise4_4B.txt  myrootsLink.cpp  newton_fMain.cpp  newton_gMain.cpp  roots.cpp
submission/answers/exercise05/: exercise5_1B.txt  exercise5_3.txt  expMain.cpp
submission/answers/exercise06/: cubicsplineLink.cpp  exercise6_2B.txt  exercise6_4.txt  richardson.cpp  richardson_test.cpp
submission/answers/exercise07/: exercise7_2.txt  romberg.cpp
submission/answers/exercise08/: exercise8_4.txt  exercise8_5b.txt  golden.cpp  goldenMain.cpp  minimize.cpp  minimizeLink.cpp
test/: CMakeLists.txt
test_GSL/: CMakeLists.txt  verify.cpp
test_eigen/: eigentest.cpp  eigentest3.cpp
test_eigenpy/: CMakeLists.txt
(+74 files in other folders)
